--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "celebrate": "^13.0.4",
     "express": "^4.17.1",
     "mongoose": "^5.11.15"
   }
