refactor: apply solid concepts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     /* Experimental Options */
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
-    "forceConsistentCasingInFileNames": true
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true
   }
 }
