chore: add jest and coverage config

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,5 +28,6 @@
     "emitDecoratorMetadata": true,
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true
-  }
+  },
+  "exclude": ["__tests__"]
 }
