--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "nodemon src/app.ts",
     "lint": "eslint src/** --ext .ts --fix",
+    "test": "jest",
     "dcup": "docker-compose -f docker-compose.yml up --build"
   },
   "repository": {
@@ -20,17 +21,25 @@
   },
   "homepage": "https://github.com/SamuelSabino/squads-challenge#readme",
   "devDependencies": {
+    "@babel/core": "^7.12.16",
+    "@babel/preset-env": "^7.12.16",
+    "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/express": "^4.17.11",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.24",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
+    "babel-jest": "^26.6.3",
     "eslint": "^7.3.1",
     "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.2",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.7",
+    "nyc": "^15.1.0",
+    "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
