--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/app.ts",
+  "private": true,
   "scripts": {
-    "start": "nodemon src/app.ts",
+    "build": "tsc",
+    "start": "nodemon src/shared/infra/http/server.ts",
     "lint": "eslint src/** --ext .ts --fix",
     "test": "jest",
+    "test:unit": "jest --config jest-unit.config.js --passWithNoTests --coverage=false",
+    "test:integration": "jest --config jest-integration.config.js --passWithNoTests --coverage=false",
     "dcup": "docker-compose -f docker-compose.yml up --build"
   },
   "repository": {
@@ -27,6 +31,7 @@
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.24",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-jest": "^26.6.3",
@@ -39,6 +44,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
+    "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
