--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "build": "tsc",
     "start": "nodemon src/shared/infra/http/server.ts",
     "lint": "eslint src/** --ext .ts --fix",
+    "pretest": "jest .src/shared/infra/mongo/transaction.ts --passWithNoTests",
     "test": "jest",
-    "test:unit": "jest --config jest-unit.config.js --passWithNoTests --coverage=false",
-    "test:integration": "jest --config jest-integration.config.js --passWithNoTests --coverage=false",
     "dcup": "docker-compose -f docker-compose.yml up --build"
   },
   "repository": {
@@ -27,11 +26,13 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/preset-env": "^7.12.16",
+    "@babel/preset-typescript": "^7.12.16",
     "@istanbuljs/nyc-config-typescript": "^1.0.1",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.20",
     "@types/node": "^14.14.24",
     "@types/supertest": "^2.0.10",
+    "@types/uuid-1345": "^0.99.21",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "@typescript-eslint/parser": "^2.34.0",
     "babel-jest": "^26.6.3",
@@ -44,6 +45,7 @@
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "nyc": "^15.1.0",
+    "source-map-support": "^0.5.19",
     "supertest": "^6.1.3",
     "ts-jest": "^26.5.1",
     "ts-node": "^9.1.1",
@@ -52,6 +54,7 @@
   "dependencies": {
     "celebrate": "^13.0.4",
     "express": "^4.17.1",
-    "mongoose": "^5.11.15"
+    "mongoose": "^5.11.15",
+    "uuid-1345": "^1.0.2"
   }
 }
