chore: add __tests__ volumes in docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,3 +24,4 @@ services:
     volumes: 
       - /app/squads-challenge/node_modules
       - ./src:/app/squads-challenge/src
+      - ./__tests__:/app/squads-challenge/__tests__
